adjusted styling for smaller screens, didn't like how it was behaving. Wanted delete button visible on notes from the start, so instead of tinkering with another solution I'm optiong to simply make the buttons bigger to enable this original intention. Styling is a bit less general now, but I think it's looking nicer so hopefully won't be an issue long term.

--- a/src/style.css
+++ b/src/style.css
@@ -18,20 +18,23 @@ button:hover {
 }
 
 .noteapp-container {
-    display: flex;
+    /*display: flex;*/
     width: 100%;
     min-height: 100vh;
 }
 
 .notes_sidebar {
     width: 4em;
+    position: absolute;
+    /*float: left;*/
     overflow-y: auto;
+    height: 100%;
     max-height: 100vh;
     display: flex;
     flex-direction: column;
     gap: 2em;
     align-items: center;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 .notes_sidebar-note {
@@ -45,12 +48,21 @@ button:hover {
     color: var(--txt-color);
     border-style: none;
     border: 2px solid var(--txt-color);
+    
 }
 
 .notes_sidebar-note-select {
     position: relative;
-    height: 48px;
-    padding: 0 32px 0 0;
+    width: 8em;
+    font-size: 1em;
+    min-height: 64px;
+    min-width: 64px;
+    text-align: left;
+}
+
+.notes_sidebar-note-select:active, .notes_sidebar-note-select:focus {
+    background-color: var(--special-color);
+    color: var(--bg-color);
 }
 
 .notes_sidebar-note-delete {
@@ -60,16 +72,21 @@ button:hover {
     right: 0;
     width: fit-content;
     height: fit-content;
+    min-width: 48px;
+    min-height: 48px;
 }
 
+/*
 .notes_sidebar-note_selected button {
     background-color: var(--special-color);
     color: var(--bg-color);
-}
+}*/
 
 #notes_sidebar-add_note {
-    width: 48px;
-    height: 48px;
+    /*width: 48px;
+    height: 48px;*/
+    min-width: 48px;
+    min-height: 48px;
     margin: var(--common-spacing) auto;
     background-color: var(--txt-color);
     color: var(--bg-color);
@@ -83,9 +100,12 @@ button:hover {
 }
 
 .editor {
-    width: 100%;
+    width: fit-content;
+    min-width: 90%;
     height: 100%;
-    margin-left: 1em;
+    margin-left: 4em;
+    /*margin-left: 1em;
+    float: right;*/
 }
 
 .editor-textstyle {
@@ -145,6 +165,8 @@ button:hover {
     background-color: var(--bg-color);
     width: 100%;
     height: 100%;
+    min-width: 48px;
+    min-height: 48px;
     border: 2px solid var(--txt-color);
 }
 
